--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website | Worood Assi</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B9KD5SS59F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-B9KD5SS59F');
+    </script>
   </head>
   <body class= "dark:bg-black text-black dark:text-white">
+    <!-- <h1>hi there!</h1>
+    <button onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Subscribe Button' });">
+      Subscribe
+    </button> -->
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
