--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/blackLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using Vite React project, personal portfolio"
+    />
     <title>Personal Website | Worood Assi</title>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B9KD5SS59F"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-B9KD5SS59F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-B9KD5SS59F');
-    </script>
+    </script> -->
   </head>
   <body class= "dark:bg-black text-black dark:text-white">
-    <!-- <h1>hi there!</h1>
-    <button onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Subscribe Button' });">
-      Subscribe
-    </button> -->
-    
+    <noscript>
+      <h1 style="text-align: center;">You need to enable JavaScript to run this app.</h1>
+    </noscript>
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
