--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using Vite React project, personal portfolio"
+      content="This personal portfolio is built with React, TypeScript, and Tailwind CSS. It effectively showcases my skills, projects, and professional experience."
     />
     <title>Personal Website | Worood Assi</title>
     
