--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
       content="This personal portfolio is built with React, TypeScript, and Tailwind CSS. It effectively showcases my skills, projects, and professional experience."
     />
     <title>Personal Website | Worood Assi</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "NewsArticle",
+        "headline": "Personal Portfolio | Worood Assi",
+        "image": [
+          "@/assets/blackLogo"
+        ],
+        "author": [{
+            "@type": "Person",
+            "name": "Worood Assi",
+            "url": "https://woroodassi.netlify.app"
+          }],
+          "publisher":
+            [
+              {
+                "name": "Worood Assi",
+                "url": "https://woroodassi.netlify.app"
+              }
+            ]
+      }
+      </script>
     
     <!-- Google tag (gtag.js) -->
     <!-- <script>
