--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         "@type": "WebSite",
         "name": "Worood Assi",
         "url": "https://woroodassi.netlify.app",
-        "potentialAction": {
+        <!-- "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://www.yourwebsite.com/search?q={search_term_string}",
+          "target": "https://woroodassi.netlify.app",
           "query-input": "required name=search_term_string"
-        },
+        }, -->
         "description": "Personal Portfolio | Worood Assi",
         "inLanguage": "en",
         "publisher": {
